--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -21,18 +21,14 @@
     <meta property="og:title" content="Greensource Energy - Developing clean and safe energy solution" />
     <meta property="og:url" content="https://greensourcenergy.com" />
     <meta property="og:site_name" content="Greensource Energy" />
-    <meta property="og:image" content="http://greensourcenergy.com/static/images/homepage2.jpg" />
+    <meta property="og:image" content="https://greensourcenergy.com/static/images/homepage2.jpg" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="We are an end-to-end, customer oriented, innovative green energy and management company providing cutting edge renewable
     energy solutions for residential, large and small businesses..." />
     <title>{% block title %}Greensource Energy -{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'home.css' %}" %} type="text/css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />     
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/fontawesome.min.css" rel="stylesheet" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" rel="stylesheet" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/regular.min.css" rel="stylesheet" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/brands.min.css" rel="stylesheet" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/solid.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
     <link href="{% static 'lib/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" />
     <link href="{% static 'src/simple-lightbox.min.css' %}" rel='stylesheet' />
     <link href="{% static 'animate.min.css' %}" rel="stylesheet" type="text/css" />
@@ -43,11 +39,11 @@
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png' %}" />
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-16x16.png' %}" />
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
-    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Play&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Big+Shoulders+Text&display=swap" rel="stylesheet" /> 
+    <link  rel="stylesheet" href='https://fonts.googleapis.com/css?family=Poppins|Play|Big+Shoulders+Text' />
     <link rel="stylesheet" type="text/css" href="https://cdn.wpcc.io/lib/1.0.2/cookieconsent.min.css" />
     <link rel="canonical" href="https://greensourcenergy.com/news/">
+    <link rel="canonical" href="https://greensourcenergy.com/news/category/">
+    <link rel="canonical" href="https://greensourcenergy.com/news/category/detail/">
     <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
 </head>
 <body>
@@ -252,8 +248,8 @@
             </div>
         </div>
     </section>
-    <script async src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>  
-    <script>window.jQuery || document.write('<script src="/static/js/jquery-3.3.1.min.js"><\/script>')</script></script>
+    <script async src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>window.jQuery || document.write('<script src="/static/js/jquery-3.6.0.min.js"><\/script>')</script></script>
     <script async src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script>window.jQuery || document.write('<script src="/static/js/popper.min.js"><\/script>')</script></script>
     <script async src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
@@ -268,7 +264,7 @@
     <script src="{% static 'src/superfish.min.js' %}"></script>
     <script src="{% static 'src/simple-lightbox.min.js' %}"></script>
     <script src="https://cdn.wpcc.io/lib/1.0.2/cookieconsent.min.js" defer></script>
-    <script>window.addEventListener("load", function () { window.wpcc.init({ "border": "normal", "corners": "small", "colors": { "popup": { "background": "#222222", "text": "#ffffff", "border": "#192712" }, "button": { "background": "#b5e1a0", "text": "#000000" } }, "position": "bottom-left", "content": { "href": "https://www.greensourcenergy.com/privacy/" } }) });</script>
+    <script>window.addEventListener("load", function () { window.wpcc.init({ "border": "normal", "corners": "small", "colors": { "popup": { "background": "#222222", "text": "#ffffff", "border": "#192712" }, "button": { "background": "#b5e1a0", "text": "#000000" } }, "position": "bottom-left", "content": { "href": "https://www.greensourcenergy.com/privacy-Policy/" } }) });</script>
     <script>
         var test = document.createElement("div")
         test.className = "hidden d-none"
