--- a/greensource_pages/templates/greensource_pages/about.html
+++ b/greensource_pages/templates/greensource_pages/about.html
@@ -6,7 +6,7 @@
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <h1>GREEN ENERGY SPECIALISTS</h1> 
+            <h1>SOLAR ENERGY PROFESSIONALS</h1> 
         </div>
     </div>
 </div>
@@ -20,18 +20,22 @@
 </nav>
 <div class="container-fluid padding">
     <div class="about-us row padding">
-        <div class="col-lg-7 col-md-7 col-xs-12">
+        <div class="col-lg-6">
             <p class="about">
-                Greensource Energy is a new renewable energy and management business specializing in energy conservation, solar energy storage,
-                solar panel installation, solar energy services, and sustainability solutions. We are a full-service, customer-focused,
-                innovative solar energy and management firm that offers cutting-edge renewable energy solutions for homes, large and
-                small businesses. Our goal is to design and install best-fit systems that are also cost-effective.
-                <br/>
-                <br/> We assist you in redefining your relationship with your energy use by encouraging you to take control of your energy
-                use and lowering utility costs and fuel hike prices by 50%. We work hard to win customers' confidence because we believe
-                that long-term partnerships and good relationships are essential to our long-term success.</p>
+                 At Greensource Energy Consult, our aim is to offer quality solar products and standard delivery services, keeping an eye
+                on the latest trends in the industry, putting our customer’s wishes first. This is made possible by our team of young and
+                motivated engineers. We believe in great bargains and excellent service, which is why we commit ourselves to giving you the
+                best of both. <br/><br/>Greensource Energy Consult started as a small business in Ogun state, Nigeria on July 2018, founded by Olumide
+                Omogbule a graduate of Environmental Engineering from Obafemi Awolowo University. Driven with the passion to ensure a place
+                of comfort for homes and businesses. He earned several certifications in solar energy system training with sole purpose to
+                deliver quality on all installations, this in turn as yielded dividends.<br/><br/> Our goal is to deploy a continuous of providing
+                our customers with reliable products, standard installation procedures and best operations and maintenance practice needed
+                to ensure their solar energy system gives them value in return on their investment. Our customers are our top priority because
+                they are the reason we exist. Through our reliable services and standard of practice, we work hard and smart towards building
+                a long lasting and meaningful relationship with our customers with the mission of growing a community of Green energy users.
+            </p>
         </div>
-        <div class="people wow fadeIn col-lg-5 col-md-5 col-xs-12" data-wow-duration="4s" data-wow-delay="0.3s" data-wow-offset="10">
+        <div class="people wow fadeIn col-lg-6" data-wow-duration="4s" data-wow-delay="0.3s" data-wow-offset="10">
             <img src="{% static 'images/about-us.webp' %}" class="img-fluid" alt="rooftop installation" />
             <div class="inner-box">
                 <span  data-toggle="counter-up">100</span>
@@ -152,7 +156,7 @@
 <section id="call-to-action">
     <div class="container-fluid padding wow fadeIn">
         <div class="row">
-                <p class="col-lg-9 col-md-8 col-xs-12 cta-text">Want to start a custom fit Project for your home/business? &nbsp Talk to an Authorized Solar Professional.</p>
+                <p class="col-lg-9 col-md-8 col-xs-12 cta-text">Need an optimal solar system for your home/business? &nbsp Fill our form to get a CallBack.</p>
                 <h3 class="col-lg-3 col-md-4 col-xs-12">
                 <a href="{% url 'contact_us' %}">Get in Touch
                     <i class="fas fa-arrow-right"></i>
@@ -164,8 +168,8 @@
 <div class="container padding">
     <div class="row padding">
         <div class="service col-12">
-            <p>You get quality going solar</p>
-            <h5>Benefits of Solar</h5>
+            <p>building an eco-friendly community</p>
+            <h5>Benefits of our Installation</h5>
             <hr />
         </div>
         <div class="benefits row padding">
@@ -245,7 +249,7 @@
 	</g>
 </g>
 </svg>
-                <h4>We've Got You</h4>
+                <h4>Support Team</h4>
             </div>
             <div class="benefits-body">
                 <svg height="90px" viewBox="0 0 256 256" width="90px" xmlns="http://www.w3.org/2000/svg">
@@ -315,7 +319,7 @@
 <div class="container-fluid padding">
     <div class="row-counters row padding">
             <div class="counter-heading col-12">
-                    <p>You always get the best guidance</p>
+                    <p>our business success track record</p>
                     <h5>Our Business Success</h5>
                     <hr />
                 </div>
@@ -323,7 +327,7 @@
             <div>
                 <i class="far fa-smile"></i>
             </div>
-            <span data-toggle="counter-up">35</span>
+            <span data-toggle="counter-up">18</span>
             <span class="sign">+</span>
             <p>Happy Clients</p>
         </div>
