--- a/greensource_pages/templates/greensource_pages/design-plans.html
+++ b/greensource_pages/templates/greensource_pages/design-plans.html
@@ -8,7 +8,7 @@ menu-active
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <h1>SOLAR SHOP</h1>
+            <h1>GREENSOURCE SOLAR SHOP</h1>
         </div>
     </div>
 </div>
