--- a/greensource_pages/templates/greensource_pages/our-team.html
+++ b/greensource_pages/templates/greensource_pages/our-team.html
@@ -5,7 +5,7 @@
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <h1>GREEN ENERGY TEAM</h1>
+            <h1>SOLAR ENERGY TEAM</h1>
         </div>
     </div>
 </div>
@@ -51,8 +51,18 @@
                 <h5>Project Manager</h5>
             </div>
         </div>
-       
-        <!-- <div class="member-box member-4">
+        
+        <div class="member-box member-5">
+            <div class="member-img">
+                <img src="{% static 'images/yussuf.webp' %}" alt="PV Engineer">
+            </div>
+            <div class="member-name">
+                <h3>Yussuf Adebayo</h3>
+                <h5>Lead Engineer</h5>
+            </div>
+        </div>
+
+        <div class="member-box member-4">
             <div class="member-img">
             <img src="{% static 'images/george.png' %}" alt="Male Business lead">
             </div>
@@ -62,17 +72,7 @@
             </div>
         </div>
         
-        <div class="member-box member-5">
-            <div class="member-img">
-                <img src="{% static 'images/yussuf.png' %}" alt="PV Engineer">
-            </div>
-            <div class="member-name">
-                <h3>Yussuf Adebayo</h3>
-                <h5>Lead Engineer</h5>
-            </div>
-        </div>
-        
-        <div class="member-box member-6">
+        <!-- <div class="member-box member-6">
             <div class="member-img">
                 <img src="images/t6-a.jpg">
             </div>
@@ -87,7 +87,7 @@
                 <div class="detail-box-img">
                     <img src="{% static 'images/ceo.webp' %}" alt="CEO">
                 </div>
-                <div class="detail-box-text">
+                <div class="detail-box-text"> 
                     <a href="javascript:void(0);" class="cancel">
                         <i class="fas fa-times"></i>
                     </a>
@@ -165,8 +165,36 @@
                 </div>
             </div>
         </div>
-      
-        <!-- <div class="detail-box-4">
+       
+        <div class="detail-box-5">
+            <div class="member-detail-box">
+                <div class="detail-box-img">
+                    <img src="{% static 'images/yussuf.webp' %}" alt="PV Engineer">
+                </div>
+                <div class="detail-box-text">
+                    <a href="javascript:void(0);" class="cancel">
+                        <i class="fas fa-times"></i>
+                    </a>
+                    <h4 class="detail-name">Yussuf Adebayo - B.Ed</h4>
+                    <div class="member-social-links">
+                        <a href="#">
+                            <i class="fas fa-caret-down"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fas fa-caret-down"></i>
+                        </a>
+                    </div>
+                    <h5 class="position">Position: Lead Engineer</h5>
+                    <p>Yussuf Adebayo is a graduate of Educational Management from the University of Ilorin. He s also an
+                        associate member of the assocation of accountacy bodies in west Africa (ABWA). An Instructor on solar energy 
+                        systems and a certified PV Designer and Installer with over 3 years of experience.  
+                    </p>
+                    <a href="#" class="view-work-btn">View Profile</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="detail-box-4">
             <div class="member-detail-box">
                 <div class="detail-box-img">
                     <img src="{% static 'images/afolabi.png'  %}">
@@ -188,34 +216,6 @@
                     <p>The man who pulls all the strings in making all your ideas come to live! If he says, its possible - it's
                         possible. He's very dependable, energetic, humourous and passionate. Loves leading projects with
                         full stack development skills on the side. Share your ideas with him and he will make it happen.
-                    </p>
-                    <a href="#" class="view-work-btn">View Profile</a>
-                </div>
-            </div>
-        </div>
-       
-        <div class="detail-box-5">
-            <div class="member-detail-box">
-                <div class="detail-box-img">
-                    <img src="{% static 'images/yussuf.png' %}" alt="PV Engineer">
-                </div>
-                <div class="detail-box-text">
-                    <a href="javascript:void(0);" class="cancel">
-                        <i class="fas fa-times"></i>
-                    </a>
-                    <h4 class="detail-name">Yussuf Adebayo - B.Ed</h4>
-                    <div class="member-social-links">
-                        <a href="#">
-                            <i class="fas fa-caret-down"></i>
-                        </a>
-                        <a href="#">
-                            <i class="fas fa-caret-down"></i>
-                        </a>
-                    </div>
-                    <h5 class="position">Position: Lead Engineer</h5>
-                    <p>Yussuf Adebayo is a graduate of Educational Management from the University of Ilorin. He s also an
-                        associate member of the assocation of accountacy bodies in west Africa (ABWA). An Instructor on solar energy 
-                        systems and a certified PV Designer and Installer with over 3 years of experience.  
                     </p>
                     <a href="#" class="view-work-btn">View Profile</a>
                 </div>
@@ -248,7 +248,7 @@
                     <a href="#" class="view-work-btn">View Profile</a>
                 </div>
             </div>
-        </div> -->
+        </div>
     </div>
 </section>
 
