--- a/greensource_pages/templates/greensource_pages/service-detail.html
+++ b/greensource_pages/templates/greensource_pages/service-detail.html
@@ -9,7 +9,7 @@ menu-active
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <h1>SOLAR SERVICE DETAILS</h1>
+            <h1>SOLAR ENERGY DETAILS</h1>
         </div>
     </div>
 </div>
@@ -22,11 +22,11 @@ menu-active
 </nav>
 <div class="container-fluid padding">
     <div class="light row padding">
-        <ul class="list-group col-lg-4">
+        <ul class="list-group col-lg-4 col-md-5 col-xs-12">
             <li class="list-group-item list-group-item-success"><a href="{% url 'services' %}"><i class="fas fa-caret-right"></i> All Services</a></li>
             <li class="list-group-item"><a href="{% url 'solar_design' %}"><i class="fas fa-caret-right"></i> Residential Solar</a></li>
             <li class="list-group-item"><a href="{% url 'commercial_solar' %}"><i class="fas fa-caret-right"></i> Commercial Solar</a></li>
-            <li class="list-group-item"><a href="{% url 'off_grid_solar' %}"><i class="fas fa-caret-right"></i> Off-Grid Solar</a></li>
+            <li class="list-group-item"><a href="{% url 'off_grid_solar' %}"><i class="fas fa-caret-right"></i> Inverter Installation</a></li>
             <li class="list-group-item"><a href="{% url 'electrical_design' %}"><i class="fas fa-caret-right"></i> Solar Lighting</a></li>
             <li class="list-group-item"><a href="{% url 'solar_water_pump' %}"><i class="fas fa-caret-right"></i> Solar Water Pump</a></li>
             <li class="list-group-item"><a href="{% url 'energy_management' %}"><i class="fas fa-caret-right"></i> Solar Storage</a></li>
@@ -34,15 +34,15 @@ menu-active
             <li class="list-group-item"><a href="{% url 'hvac' %}"><i class="fas fa-caret-right"></i> Solar Upgrade</a></li>
             <li class="list-group-item"><a href="{% url 'maintenance_service' %}"><i class="fas fa-caret-right"></i> Solar Maintenance</a></li>
         </ul>
-        <div class="services-details col-lg-8">
-            <img src="{% static 'images/foot.webp' %}" />
-            <h4>Green, Sustainable, Fits the bill !</h4>
+        <div class="services-details col-lg-8 col-md-7 col-xs-12">
+            <img src="{% static 'images/simulation.gif' %}" />
+            <!-- <h4>Green, Sustainable, Fits the bill !</h4>
             <p class="policy">
                 With our exclusive tailored design for our individual customers, we are committed to providing sustainable and secure
                 energy by harnessing the abundant power of the SUN. Our mission is to provide creative, seamless, secure, and sustainable
                 solar energy through end-to-end customer relationships and strategic partnerships. We create a custom-fit system for
                 you that provides a good return on your investment and long-term savings.
-            <p>
+            <p> -->
         </div>
     </div>
     <section>
