--- a/news/templates/article_detail.html
+++ b/news/templates/article_detail.html
@@ -10,7 +10,7 @@ menu-active
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <h1>SOLAR BLOG POST</h1>
+            <h1>SOLAR ENERGY BLOG</h1>
         </div>
     </div>
 </div>
@@ -22,7 +22,6 @@ menu-active
         <li class="breadcrumb-item active">Blog-Post</li>
     </ol>
 </nav>
-
 <section>
     <div class="container-fluid padding">
         <div class="blog row">
