--- a/contact_us/templates/contact_us/contact.html
+++ b/contact_us/templates/contact_us/contact.html
@@ -28,7 +28,7 @@ menu-active
                 <i class="far fa-envelope"></i>
                 <a href='ma&#105;lto&#58;hel%6C%&#54;F&#64;gr&#37;6&#53;e%&#54;&#69;&#115;%6F&#117;r%&#54;3e&#37;&#54;&#69;ergy&#46;co%6D'>hell&#111;&#64;&#103;reens&#111;ur&#99;energy&#46;com</a>
             </p>
-            <p><i class="fas fa-phone"></i>(234)802 944 2697 <br /> (234)807 606 8609</p>
+            <p><i class="fas fa-phone"></i>(234)802-944-2697 <br /> (234)807 6068 609</p>
         </div>
                 <div class="map col-lg-6 col-xs-12 col-md-9">
                     <embed aysnc src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7922.741452898637!2d3.433366268485239!3d6.84608399012105!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103bc7b12aa0619b%3A0x668d6d2407416eeb!2sGREENSOURCE+ENGINEERING+CONSULT!5e0!3m2!1sen!2sng!4v1554279134001!5m2!1sen!2sng" width="800" height="450" frameborder="0" style="border:0" allowfullscreen></embed>
@@ -63,7 +63,7 @@ menu-active
                     </div>
                     <button type="submit" name="submit" class="btn">Send Message</button>
                 </form>
-                <p>*please note that we do not rent or sell your information to any third parties! Refer to our <a href="{% url 'privacy' %}"><strong>Privacy Policy</strong></a> for more details*</p>
+                <p>*We do not rent or sell our customers information to any third parties! Refer to our <a href="{% url 'privacy' %}"><strong>Privacy Policy</strong></a> for more details*</p>
             </div>
     </div>  
 </div>
