--- a/greensource_pages/templates/greensource_pages/index.html
+++ b/greensource_pages/templates/greensource_pages/index.html
@@ -3,15 +3,15 @@
 menu-active
 {% endblock %}
 {% load static %}
-{% block title %}{{ block.super }} Developing clean and safe energy solution{% endblock %}
+{% block title %}{{ block.super }} Affordable solar energy for everyone{% endblock %}
 {% block content %}
 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
             <img src="{% static 'images/homepage1.webp' %}" alt="array of roof mounted solar panels">
             <div class="carousel-caption">
-                <h1 class="animated zoomIn">INNOVATIVE <span>GREEN</span> ENERGY SOLUTION</h1>
-                <h2 class="animated fadeInUp">We want to see people, businesses and communities benefit from the use of green energy.</h2>
+                <h1 class="animated zoomIn">INNOVATIVE <span>SOLAR</span> SOLUTION</h1>
+                <h2 class="animated fadeInUp">We want to see everyone benefit from the use of green energy.</h2>
                 <div class="button animated fadeInDown">
                     <a class="btn active" href="{% url 'services' %}" role="button">Discover More</a>
                     <a class="btn" href="{% url 'contact_us' %}" role="button">Contact Us</a> 
@@ -22,7 +22,7 @@ menu-active
             <img src="{% static 'images/homepage2.webp' %}" alt="array of ground mounted solar panels ">
             <div class="carousel-caption">
                 <h1 class="animated zoomIn">CLEAN. <span>SAFE.</span> RENEWABLE.</h1>
-                <h2 class="animated fadeInUp">We are committed to help build a global, more sustainable energy future</h2>
+                <h2 class="animated fadeInUp">An energy independent future is achieveable for everybody.</h2>
                 <div class="button animated fadeInDown">
                     <a class="btn active" href="{% url 'services' %}" role="button">Discover More</a>
                     <a class="btn" href="{% url 'contact_us' %}" role="button">Contact Us</a>
@@ -30,10 +30,10 @@ menu-active
             </div>
         </div>
         <div class="carousel-item">
-            <img src="{% static 'images/homepage3.webp' %}" alt="offic space powered by a solar system">
+            <img src="{% static 'images/homepage3.webp' %}" alt="office space powered by a solar system">
             <div class="carousel-caption">
-                <h1 class="animated zoomIn">TRUSTED <span>ALTERNATIVE</span> ENERGY</h1>
-                <h2 class="animated fadeInUp">We belive in an are dedicated to providing you with the quality of services you are looking for.</h2>
+                <h1 class="animated zoomIn">SIMPLE. <span>RELIABLE.</span> FITS THE BILL.</h1>
+                <h2 class="animated fadeInUp">We are committed to providing premium services at optimum cost.</h2>
                 <div class="button animated fadeInDown">
                     <a class="btn active" href="{% url 'services' %}" role="button">Discover More</a>
                     <a class="btn" href="{% url 'contact_us' %}" role="button">Contact Us</a>
@@ -56,36 +56,36 @@ menu-active
             <div>
                 <i class="fas fa-certificate"></i>
             </div>
-            <h6>Well experienced</h6>
+            <h6>Experience level</h6>
             <p>5+ years of experience.</p>
         </div>
         <div class="colum-body col-xs-12 col-md-6 col-lg-3">
             <div>
                 <i class="fas fa-project-diagram"></i>
             </div>
-            <h6>Custom Fit Design</h6>
+            <h6>Unique service</h6>
             <p>Custom design for all clients.</p>
         </div>
         <div class="colum-body col-xs-12 col-md-6 col-lg-3">
             <div>
                 <i class="fas fa-tags"></i>
             </div>
-            <h6>Trusted services</h6>
-            <p>We are trusted by our clients.</p>
+            <h6>Gold standard</h6>
+            <p>Best practices service.</p>
         </div>
         <div class="colum-body col-xs-12 col-md-6 col-lg-3">
             <div>
                 <i class="fas fa-headset"></i>
             </div>
-            <h6>24/7 support</h6>
-            <p>(234)802 944 2697.</p>
+            <h6>24/7 support (234)</h6>
+            <p>802-9442-697, 807 6068 609.</p>
         </div>
     </div>
 </div>
 <section>
     <div class="container-fluid padding">
         <div class="service col-12">
-            <p>We are building a sustainable future</p>
+            <p>Improved wellbeing through energy availability</p>
             <h5>Why choose Greensource</h5>
             <hr />
         </div>
@@ -97,22 +97,22 @@ menu-active
                     <div>
                         <i class="fas fa-check"></i>
                     </div>
-                    <h6>Best Energy Solutions</h6>
-                    <p>Over 5 years of rich experience in the solar energy sector. Over 250KW + generated</p>
+                    <h6>Innovative Energy Solutions</h6>
+                    <p>Vast experience in design, installation, operations and maintenance.</p>
                 </div>
                 <div class="choose-body">
                     <div>
                         <i class="fas fa-check"></i>
                     </div>
-                    <h6>End-To-End Services</h6>
-                    <p>Vast experience in design, installation, operations, maintenance and power distribution.</p>
+                    <h6>Client Satisfaction</h6>
+                    <p>End-to-end customer relationships and strategic partnerships, delivering optimum services.</p>
                 </div>
                 <div class="choose-body">
                     <div>
                         <i class="fas fa-check"></i>
                     </div>
-                    <h6>Global Expertise</h6>
-                    <p>A perfect blend of on-field and off-field experience, enhancing technological advancement</p>
+                    <h6>Optimal services</h6>
+                    <p>A perfect blend of on-field and off-field experience, delivering optimum services all the way.</p>
                 </div>
                 <div class="choose-body">
                     <div>
@@ -220,12 +220,12 @@ menu-active
                         <div class="inner-content">
                             <i class="fas fa-solar-panel"></i>
                             <h3>
-                                <a href="{% url 'solar_design' %}">off-grid solar</a>
+                                <a href="{% url 'solar_design' %}">Inverter Installation</a>
                             </h3>
                         </div>
                     </div>
                     <div class="image-block">
-                        <img src="{% static 'images/offgrid solar.webp' %}" alt="installed rooftop monocrystalline panels" />
+                        <img src="{% static 'images/Inverter.webp' %}" alt="installed rooftop monocrystalline panels" />
                         <div class="overlay">
                             <div class="box">
                                 <div class="content">
@@ -818,7 +818,7 @@ menu-active
 <section id="call-to-action">
     <div class="container-fluid padding wow fadeIn">
         <div class="row">
-                <p class="col-lg-9 col-md-8 col-xs-12 cta-text">Want to start a custom fit Project for your home/business? &nbsp Talk to an Authorized Solar Professional.</p>
+                <p class="col-lg-9 col-md-8 col-xs-12 cta-text">Need an optimal solar system for your home/business? &nbsp Fill our form to get a CallBack.</p>
                 <h3 class="col-lg-3 col-md-4 col-xs-12">
                 <a href="{% url 'contact_us' %}">Get in Touch
                     <i class="fas fa-arrow-right"></i>
@@ -830,7 +830,7 @@ menu-active
 <div class="container-fluid padding">
     <div class="row-counters row padding">
         <div class="counter-heading col-12">
-            <p>You always get the best guidance</p>
+            <p>our business success track record</p>
             <h5>Our Business Numbers</h5>
             <hr />
         </div>
@@ -838,7 +838,7 @@ menu-active
             <div>
                 <i class="far fa-smile"></i>
             </div>
-            <span data-toggle="counter-up">35</span>
+            <span data-toggle="counter-up">18</span>
             <span class="sign">+</span>
             <p>Happy Clients</p>
         </div>
