--- a/greensource_pages/templates/greensource_pages/pricing.html
+++ b/greensource_pages/templates/greensource_pages/pricing.html
@@ -382,7 +382,7 @@ menu-active
 <section id="call-to-action">
     <div class="container-fluid padding wow fadeIn">
         <div class="row">
-                <p class="col-lg-9 col-md-8 col-xs-12 cta-text">Want to start a custom fit Project for your home/business? &nbsp Talk to an Authorized Solar Professional.</p>
+                <p class="col-lg-9 col-md-8 col-xs-12 cta-text">Need an optimal solar system for your home/business? &nbsp Fill our form to get a CallBack.</p>
                 <h3 class="col-lg-3 col-md-4 col-xs-12">
                 <a href="{% url 'contact_us' %}">Get in Touch
                     <i class="fas fa-arrow-right"></i>
