--- a/greensource_pages/templates/greensource_pages/services.html
+++ b/greensource_pages/templates/greensource_pages/services.html
@@ -8,7 +8,7 @@ menu-active
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <h1>SOLAR SERVICES</h1>
+            <h1>SOLAR ENERGY SERVICES</h1>
         </div>
     </div>
 </div>
@@ -73,12 +73,12 @@ menu-active
                         <div class="inner-content">
                             <i class="fas fa-solar-panel"></i>
                             <h3>
-                                <a href="{% url 'off_grid_solar' %}">off-grid solar</a>
+                                <a href="{% url 'off_grid_solar' %}">Inverter installation</a>
                             </h3>
                         </div>
                     </div>
                     <div class="image-block">
-                        <img src="{% static 'images/offgrid solar.webp' %}" alt="rooftop solar" />
+                        <img src="{% static 'images/Inverter.webp' %}" alt="inverter image" />
                         <div class="overlay">
                             <div class="box">
                                 <div class="content">
@@ -228,7 +228,7 @@ menu-active
 <section id="call-to-action">
     <div class="container-fluid padding wow fadeIn">
         <div class="row">
-                <p class="col-lg-9 col-md-8 col-xs-12 cta-text">Want to start a custom fit Project for your home/business? &nbsp Talk to an Authorized Solar Professional.</p>
+                <p class="col-lg-9 col-md-8 col-xs-12 cta-text">Need an optimal solar system for your home/business? &nbsp Fill our form to get a CallBack.</p>
                 <h3 class="col-lg-3 col-md-4 col-xs-12">
                 <a href="{% url 'contact_us' %}">Get in Touch
                     <i class="fas fa-arrow-right"></i>
