--- a/news/templates/article_list.html
+++ b/news/templates/article_list.html
@@ -9,7 +9,7 @@ menu-active
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <h1>LATEST NEWS</h1>
+            <h1>SOLAR ENERGY NEWS</h1>
         </div>
     </div>
 </div>
@@ -28,7 +28,7 @@ menu-active
                 {% if post_list %}
                 {% for post in post_list %}
                 <div class="cad col-lg-5 col-md-6">
-                    <amp-img src="{{post.thumb.url}}" class="card-img-top" alt="blog image" /></amp-img>
+                    <img src="{{post.thumb.url}}" class="card-img-top" alt="blog image" />
                     <p> | &nbsp; {{ post.date|date:"F d" }} &nbsp;.</p>
                     <div class="card-body">
                         <small class="text-muted"><i class="fas fa-user"></i> Admin &nbsp; &nbsp;<i class="far fa-comments"></i> {{ post.comments.count }}</small>
