--- a/static/home.css
+++ b/static/home.css
@@ -827,7 +827,7 @@ nav .breadcrumb li a:hover{
 	border-color: #02dc97;
 	padding: 30px 25px;
 	margin-top: -100px;
-	margin-left:70px;
+	margin-left: 70px;
 	text-align: center;
 }
 .people .inner-box span{
@@ -1040,7 +1040,6 @@ nav .breadcrumb li a:hover{
 	font-size: 18px;
 	margin-top: 20px;
 	color: #2dc997;
-	text-align: left;
 }
 .working p{
 	color:#cdcdcd;
@@ -1106,12 +1105,12 @@ nav .breadcrumb li a:hover{
 --------------------------------------------------------------*/
 .project{
 	margin-top: 0px;
-	margin-bottom: 30px;
+	padding-bottom: 70px;
 	justify-content: center;
 }
 .project img{
 	width: 400px;
-	height: 350px;
+	height: 400px;
 	position: relative;
 	display: inline-block;
 	-webkit-transition: opacity .5s ease-in-out;
@@ -1124,14 +1123,14 @@ nav .breadcrumb li a:hover{
 }
 .project .card .img-top{
 	width: 400px;
-	height: 350px;
+	height: 400px;
 	display: block;
 	position: absolute;
 	top: 0;
 	left: 0;
 	z-index: 99;	
 }
-.project .card-body{
+.project #accordion .card-body{
 	font-size: 15px;
 }
 .project .card:hover .img-top{
@@ -2213,25 +2212,8 @@ nav .breadcrumb li a:hover{
 	color:#006420;
 	text-decoration: none;
 }
-.light .services-details h4{
-	font-family: 'Big Shoulders Text', cursive;
-	font-size: 40px;
-	margin-top: -420px;
-	letter-spacing: 2px;
-	color:#fafafa;
-	font-weight:bold;
-	text-align: center;
-}
-.light .services-details .policy{
-	color:#fff;
-	font-size: 16px;
-	width: 80%;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	line-height: 35px;
-	padding: 40px 40px;
-	text-align: center;
+.light .services-details img{
+	height: 85%;
 }
 .details{
 	margin-top: 40px;
@@ -3361,14 +3343,9 @@ nav .pagination a:hover{
 	.benefits-body img{
 		margin-left: -140px;
 	}
-
-	.light .services-details h4{
-		font-size: 28px;
+	.light .services-details img{
 		width: 100%;
-	}
-	.light .services-details .policy{
-		font-size: 15px;
-		width: 100%;
+		height: auto;
 	}
 	.details p{
 		width: 100%;
@@ -3550,8 +3527,8 @@ nav .pagination a:hover{
 		font-size: 15px;
 	}
 	.people .inner-box{
-		margin-left: 10px;
-		padding: 20px 15px;
+		margin-left: 80px;
+		padding: 25px 20px;
 	}
 	.people .inner-box span{
 	  	font-size: 25px;
@@ -3890,6 +3867,9 @@ nav .pagination a:hover{
 		width: 100%;
 		font-size: 15px;
 	}
+	.project #accordion .card-body{
+		font-size: 15px;
+	}
 	.project .card .img-top{
 		width: 345px;
 		height: 280px;
@@ -4058,7 +4038,7 @@ nav .pagination a:hover{
 		font-size: 20px;
 	}
 	.about-us .about{
-		width: 80%;
+		width: 90%;
 		padding: 10px;
 		font-size: 15px;
 		line-height: 30px;
@@ -4067,7 +4047,7 @@ nav .pagination a:hover{
 		margin-right: auto;
 	}
 	.about-us .people img{
-		width: 70%;
+		width: 100%;
 	}
 	.about-us .about-two{
 		width: 70%;
@@ -4086,7 +4066,7 @@ nav .pagination a:hover{
 	}
 	.people .inner-box{
 		margin-left: 80px;
-		padding: 15px 10px;
+		padding: 20px 15px;
 	}
 	.people .inner-box span{
 	  font-size: 27px;
@@ -4253,11 +4233,7 @@ nav .pagination a:hover{
 	}
 	.light .services-details img{
 		width:100%;
-		height: 500px;
-	}
-	.light .services-details h4{
-		margin-top: -450px;
-		font-size: 22px;
+		height: auto;
 	}
 	.light img{
 		width:75%;
@@ -4363,9 +4339,12 @@ nav .pagination a:hover{
 		width: 367px;
 		font-size: 15px;
 	}
+	.project #accordion .card-body{
+		font-size: 15px;
+	}
 	.project .card .img-top{
 		width: 100%;
-		height:280px;
+		height: 280px;
 		display: block;
 		position: absolute;
 		top: 0;
@@ -4419,6 +4398,7 @@ nav .pagination a:hover{
 		display: block;
 		margin-left: auto;
 		margin-right: auto;
+		justify-content: center;
 	}
 	.FAQS h3{
 		font-size: 30px;
@@ -4554,12 +4534,10 @@ nav .pagination a:hover{
 		margin-right: auto;
 	}
 	.working h5{
-		font-size: 20px;
-		margin-right: 100px;
+		font-size: 20px;	
 	}
 	.working h6{
 		font-size: 20px;
-		margin-left: 100px;
 	}
 	#call-to-action h3 a{
 		width: 50%;
@@ -4665,23 +4643,18 @@ nav .pagination a:hover{
 		width: 70%;
 	}
 	.light .list-group{
-		width:80%;
-		padding:30px 5px;
+		width: 80%;
+		padding: 30px 5px;
 		margin-left: auto;
 		margin-right: auto;
 		display: block;
 	}
 	.light .services-details img{
 		width:100%;
-		height: 500px;
-	}
-	.light .services-details h4{
-		margin-top: -470px;
-		margin-bottom: 15px;
-		font-size: 20px;
+		height: auto;
 	}
 	.light img{
-		width:100%;
+		width: 100%;
 		height: auto;
 	}
 	.light .policy{
@@ -4889,14 +4862,14 @@ nav .pagination a:hover{
 		margin-top: -180px;
 		font-size: 16.5px;
 		width: 124%;
-		margin-left: -25px;
+		margin-left: -10px;
 	}
 	.carousel-caption h2{
 		font-size: 15px;
-		width: 110%;
+		width: 115%;
 		text-align: left;
-		margin-top: 0px;
-		margin-left: -25px;
+		margin-top: 5px;
+		margin-left: -10px;
 	}
 	.carousel-caption .btn{
 		width: 122px;
@@ -4908,6 +4881,8 @@ nav .pagination a:hover{
 	}
 	.carousel a{
 		margin-top: -380px;
+		margin-left: -15px;
+		margin-right: -15px;
 	}
 	.colum{
 		margin-top: -400px;
@@ -4918,10 +4893,10 @@ nav .pagination a:hover{
 		margin-bottom: 5px;
 	}
 	.colum-body p{
-		width: 100%;
+		width: 120%;
 		font-size: 13px;
 	}
-	.colum-body h4{
+	.colum-body h6{
 		width: 100%;
 		font-size: 15px;
 	}
@@ -4954,7 +4929,7 @@ nav .pagination a:hover{
 	}
 	.people .inner-box{
 		margin-left: 40px;
-		padding: 15px 10px;
+		padding: 25px 15px;
 	}
 	.people .inner-box span{
 	  font-size: 18px;
@@ -4983,18 +4958,7 @@ nav .pagination a:hover{
 	}
 	.light .services-details img{
 		width: 100%;
-		height: 500px;
-	}
-	.light .services-details h4{
-		margin-top: -500px;
-		font-size: 22px;
-	}
-	.light .services-details .policy{
-		margin: 10px 0px;
-		padding: 10px 2px;
-		justify-content: justify;
-		width: 100%;
-		font-size: 15px;
+		height: auto;
 	}
 	.working p{
 		font-size: 15px;
@@ -5138,13 +5102,11 @@ nav .pagination a:hover{
 	}
 	.testimonials-style-three-carousel-wrapper{
 		width: 100%;
+		padding: 50px 25px;
 	}
 	.testimonials-style-three-carousel-wrapper p{
 		width: 100%;
 		font-size: 14px;
-	}
-	.testimony .title-block .sec-title h2{
-		font-size: 22px;
 	}
    .testimony .title-block .sec-title p{
 		width: 100%;
@@ -5156,11 +5118,20 @@ nav .pagination a:hover{
 	}
 	.single-testimonial-style-three h3, .single-testimonial-style-three p {
 		width: 100%;
-		font-size: 17px;
+		font-size: 14px;
 	}
 	.single-testimonial-style-three .client-block .image-block > img {
 		width: 100%;
-		height: 80px;
+		height: 80px;	
+	}
+	.single-testimonial-style-three .client-block .text-block {
+		padding: 10px;
+	}
+	.single-testimonial-style-three .text-block h6{
+		font-size: 17px;
+	}
+	.single-testimonial-style-three .text-block span{
+		font-size: 14px;
 	}
 	.single-testimonial-style-one {
 		width: 85%;
@@ -5441,7 +5412,7 @@ nav .pagination a:hover{
 	}
 	.people .inner-box{
 		margin-left: 40px;
-		padding: 15px 10px;
+		padding: 25px 15px;
 	}
 	.people .inner-box span{
 		font-size: 16px;
@@ -5921,14 +5892,13 @@ nav .pagination a:hover{
 		font-size: 14px;
 	}
 	.links{
-		text-align:center;
-		width:100%;
-		margin-left:-15px;
+		text-align: center;
+		width: 100%;
 		font-size: 14px;
 	}
 	.time{
 		margin-top: -5px;
-		text-align:center;
+		text-align: center;
 		font-size: 14px;
 	}
 	.book p{
@@ -6004,9 +5974,8 @@ nav .pagination a:hover{
 		margin-top: 20px;
 	}
 	.people .inner-box{
-		margin-top: -50px;
 		margin-left: 40px;
-		padding: 15px 10px;
+		padding: 25px 15px;
 	}
 	.people .inner-box span{
 		font-size: 16px;
@@ -6024,12 +5993,6 @@ nav .pagination a:hover{
 	}
 	.choose-body{
 		margin-left: -5px;
-	}
-	#trigger{ 
-		width: 40px;
-		height: 40px;
-		font-size: 20px;
-		line-height: 10px;
 	}
 	.benefits-body{
 		width: 80%;
@@ -6398,11 +6361,13 @@ nav .pagination a:hover{
 		height: 290px;
 		margin: 95px 5px;
 		justify-content: center;
-		
 	}
 	.project #accordion .card{
 		width: 100%;
 		font-size: 15px;
+	}
+	.project #accordion .card button{
+		font-size: 16px;
 	}
 	.project .card .img-top{
 		width: 100%;
