--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -52,9 +52,9 @@
                 <p>
                     <i class="far fa-clock"></i>Mon - Fri 9.00am - 5.00pm</p>
             </div>
-            <div class="time col-xs-12 col-lg-2 col-md-6">
+            <div class="time col-xs-12 col-lg-3 col-md-6">
                 <p>
-                    <i class="fas fa-phone-alt"></i>(234)802 944 2697</p>
+                    <i class="fas fa-phone-alt"></i>(234)8029442697, (234)8076068609</p>
             </div>
             <div class="col-xs-12 col-lg-3 col-md-6">
                 <ol class="links">
@@ -80,7 +80,7 @@
                     </li>
                 </ol>
             </div>
-            <div class="book col-xs-12 col-lg-4 col-md-6">
+            <div class="book col-xs-12 col-lg-3 col-md-6">
                 <p>
                     <i class="far fa-envelope"></i>
                     <a href='ma&#105;lto&#58;hel%6C%&#54;F&#64;gr&#37;6&#53;e%&#54;&#69;&#115;%6F&#117;r%&#54;3e&#37;&#54;&#69;ergy&#46;co%6D'>hell&#111;&#64;&#103;reens&#111;ur&#99;energy&#46;com</a>
@@ -216,13 +216,14 @@
                 
                     <div class="footer-address">
                         <i class="fas fa-map-marked-alt"></i>
-                        <p>1, Heritage street by anobi Noah, arogun Mowe-Ofada Ogun.</p>
+                        <p><strong>Ogun Office</strong> - 1, Heritage street by anobi Noah, arogun Mowe-Ofada Ogun.</p>
+                        <p><strong>Lagos Office</strong> - coming soon</p>
                         <i class="far fa-envelope"></i>
                         <p>
                             <a href='ma&#105;lto&#58;hel%6C%&#54;F&#64;gr&#37;6&#53;e%&#54;&#69;&#115;%6F&#117;r%&#54;3e&#37;&#54;&#69;ergy&#46;co%6D'>hell&#111;&#64;&#103;reens&#111;ur&#99;energy&#46;com</a>
                         </p>
                         <i class="fas fa-phone"></i>
-                        <p>(234)802 944 2697 <br /> (234)807 606 8609</p>
+                        <p>(234)802-9442-697 <br /> (234)807 6068 609</p>
                     </div>
                     <div class="social">
                         <h6>/ FOLLOW US ON</h6>
@@ -321,7 +322,43 @@
                 "addressCountry": "NG"  
             }  
         }
-    </script>          
+    </script> 
+    <script>
+        var url = 'https://wati-integration-service.clare.ai/ShopifyWidget/shopifyWidget.js?89325';
+        var s = document.createElement('script');
+        s.type = 'text/javascript';
+        s.async = true;
+        s.src = url;
+        var options = {
+      "enabled":true,
+      "chatButtonSetting":{
+          "backgroundColor":"#006420",
+          "ctaText":"Message Us",
+          "borderRadius":"25",
+          "marginLeft":"0",
+          "marginBottom":"0",
+          "marginRight":"5",
+          "position":"right"
+      },
+      "brandSetting":{
+          "brandName":"GREENSOURCE ENERGY",
+          "brandSubTitle":"Reliable, Fits the bill !",
+          "brandImg":"https://www.greensourcenergy.com/static/images/ceo.webp",
+          "welcomeText":"Hello!\nHow can we help you today?",
+          "messageText":"Hello, I have a question.",
+          "backgroundColor":"#006420",
+          "ctaText":"Send",
+          "borderRadius":"25",
+          "autoShow":false,
+          "phoneNumber":"2348029442697"
+      }
+    };
+        s.onload = function() {
+            CreateWhatsappChatWidget(options);
+        };
+        var x = document.getElementsByTagName('script')[0];
+        x.parentNode.insertBefore(s, x);
+    </script>            
     <script type="text/javascript">
         var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
         (function(){
